<resources>
    <string name="app_name">Self-ServiceFood</string>
    <string name="ent_email">Enter Email</string>
    <string name="ent_pass">Enter Password</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="app_label">Confirm Password</string>
    <string name="search_hint">Confirm Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="signup_surname">Enter Surname</string>
    <string name="register">Register</string>
    <string name="continuePayement">Continue To Payment</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign Out</string>
    <string name="order_done">Done</string>
    <string name="order_start">Start Working</string>
    <string name="order_cancel">Cancel</string>
</resources>
