<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/coffee"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/sign_up_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/ent_email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/sign_up_email"
        android:layout_alignLeft="@+id/sign_up_email"
        android:layout_alignBottom="@+id/confirm"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/ent_pass"
        android:inputType="textPassword"
        android:padding="5dp"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_email"
        android:layout_alignStart="@+id/sign_up_password"
        android:layout_alignLeft="@+id/sign_up_password"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/conf_pass"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/signup_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm"
        android:layout_alignStart="@+id/confirm"
        android:layout_alignLeft="@+id/confirm"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/signup_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_name"
        android:layout_alignStart="@+id/confirm"
        android:layout_alignLeft="@+id/confirm"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/signup_surname"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/OkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_surname"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="274dp"
        android:text="@string/register"
        android:textSize="20sp" />



</RelativeLayout>